# stockmonitor

./: README.md
.github/workflows/: release.yml
openspec/changes/stealth-stock-monitor/: design.md  proposal.md  tasks.md
openspec/changes/stealth-stock-monitor/specs/app-settings/: spec.md
openspec/changes/stealth-stock-monitor/specs/floating-window/: spec.md
openspec/changes/stealth-stock-monitor/specs/hotkey-system/: spec.md
openspec/changes/stealth-stock-monitor/specs/market-data/: spec.md
openspec/changes/stealth-stock-monitor/specs/stock-watchlist/: spec.md
stealth-stock-monitor/: NEW_FEATURES.md  PROJECT_STATUS.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json
stealth-stock-monitor/.github/workflows/: release.yml
stealth-stock-monitor/scripts/: add-stocks.sh
stealth-stock-monitor/src/: App.css  main.tsx
stealth-stock-monitor/src-tauri/: Cargo.toml  tauri.conf.json
stealth-stock-monitor/src-tauri/capabilities/: default.json
stealth-stock-monitor/src-tauri/src/: config.rs  hotkey.rs  lib.rs  main.rs  models.rs  poller.rs
stealth-stock-monitor/src-tauri/src/sources/: eastmoney.rs  mod.rs  sina.rs  tencent.rs
stealth-stock-monitor/src/components/: StockItem.css  StockItem.tsx
stealth-stock-monitor/src/hooks/: useConfig.ts  useStockData.ts
stealth-stock-monitor/src/types/: index.ts
stealth-stock-monitor/src/windows/: FloatingWindow.css  FloatingWindow.tsx  SettingsWindow.css  SettingsWindow.tsx
