[package]
name = "stealth-stock-monitor"
version = "0.1.0"
description = "隐秘看盘 - 轻量级跨平台悬浮股票监控工具"
authors = ["wolf"]
edition = "2021"

[lib]
name = "stealth_stock_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
async-trait = "0.1"

